View local data finished.

--- a/GovernmentService-ejb/nbproject/private/private.properties
+++ b/GovernmentService-ejb/nbproject/private/private.properties
@@ -4,4 +4,6 @@ j2ee.server.domain=/Users/zjw/Documents/03-Monash/Semester2/5042/GlassFish_Serve
 j2ee.server.home=/Users/zjw/Documents/03-Monash/Semester2/5042/GlassFish_Server/glassfish
 j2ee.server.instance=[/Users/zjw/Documents/03-Monash/Semester2/5042/GlassFish_Server/glassfish:/Users/zjw/Documents/03-Monash/Semester2/5042/GlassFish_Server/glassfish/domains/domain1]deployer:gfv3ee6wc:localhost:4848
 j2ee.server.middleware=/Users/zjw/Documents/03-Monash/Semester2/5042/GlassFish_Server
+javac.debug=true
+javadoc.preview=true
 netbeans.user=/Users/zjw/Library/Application Support/NetBeans/8.1
