--- a/GovernmentService-ejb/nbproject/project.properties
+++ b/GovernmentService-ejb/nbproject/project.properties
@@ -34,10 +34,13 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 jar.name=GovernmentService-ejb.jar
-javac.classpath=
+jars.in.ejbjar=false
+javac.classpath=\
+    ${reference.GovernmentService-shared.jar}
 javac.debug=true
 javac.deprecation=false
-javac.processorpath=${javac.classpath}
+javac.processorpath=\
+    ${javac.classpath}
 javac.source=1.7
 javac.target=1.7
 javac.test.classpath=\
@@ -59,6 +62,8 @@ javadoc.windowtitle=
 meta.inf=${source.root}/conf
 meta.inf.excludes=sun-cmp-mappings.xml
 platform.active=default_platform
+project.GovernmentService-shared=../GovernmentService-shared
+reference.GovernmentService-shared.jar=${project.GovernmentService-shared}/dist/GovernmentService-shared.jar
 resource.dir=setup
 run.test.classpath=\
     ${javac.test.classpath}:\
